# GD-Live

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
docs/: twitch.md
src/: main.cpp
