cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS" OR IOS)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
else()
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

project(GDLive VERSION 1.0.0)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCES})
set(GDLIVE_TWITCH_CLIENT_ID "" CACHE STRING "Public Twitch application Client ID used by GD-Live account linking")
option(GDLIVE_REQUIRE_TWITCH_CLIENT_ID "Fail configuration when Twitch account linking is not configured" OFF)

if (GDLIVE_TWITCH_CLIENT_ID STREQUAL "")
    if (GDLIVE_REQUIRE_TWITCH_CLIENT_ID)
        message(FATAL_ERROR "GD Live needs a baked Twitch Client ID for release builds. Re-run CMake with -DGDLIVE_TWITCH_CLIENT_ID=YOUR_PUBLIC_CLIENT_ID.")
    endif()
    message(WARNING "GD Live Twitch linking is unavailable because GDLIVE_TWITCH_CLIENT_ID is empty. Set it before uploading an official release.")
elseif (GDLIVE_TWITCH_CLIENT_ID STREQUAL "YOUR_PUBLIC_CLIENT_ID")
    message(FATAL_ERROR "Replace YOUR_PUBLIC_CLIENT_ID with the real public Client ID from the Twitch Developer Console.")
elseif (NOT GDLIVE_TWITCH_CLIENT_ID MATCHES "^[A-Za-z0-9]+$")
    message(FATAL_ERROR "GDLIVE_TWITCH_CLIENT_ID must be only letters and numbers. Do not paste the app name, Client Secret, URL, or placeholder text.")
else()
    string(LENGTH "${GDLIVE_TWITCH_CLIENT_ID}" GDLIVE_TWITCH_CLIENT_ID_LENGTH)
    if (GDLIVE_TWITCH_CLIENT_ID_LENGTH LESS 16 OR GDLIVE_TWITCH_CLIENT_ID_LENGTH GREATER 128)
        message(FATAL_ERROR "GDLIVE_TWITCH_CLIENT_ID length looks wrong. Copy the public Client ID from the Twitch Developer Console.")
    endif()
endif()

target_compile_definitions(${PROJECT_NAME} PRIVATE GDLIVE_TWITCH_CLIENT_ID="${GDLIVE_TWITCH_CLIENT_ID}")
if (WIN32)
    target_link_libraries(${PROJECT_NAME} winhttp)
endif()

if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
else()
    message(STATUS "Found Geode: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

setup_geode_mod(${PROJECT_NAME})
